--- a/app/index.html
+++ b/app/index.html
@@ -15,17 +15,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap shadow">
-		<a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
-		<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-		<ul class="navbar-nav px-3">
-		  <li class="nav-item text-nowrap">
-			<a class="nav-link" href="#">Option</a>
-		  </li>
-		</ul>
-	</nav>
-
-	<div class="container-fluid content" >
+	<div class="container-fluid content mt-4" >
 		<div class="row">
 			<!-- <nav class="col-md-2 d-none d-md-block bg-light sidebar" style="height: calc(100vh - 58px)">
 				<div class="sidebar">
@@ -61,6 +51,8 @@
 					<img src="assets/img/sound-wave.gif" >
 				</div>
 			</div>
+
+			<audio class="congratz-sounds" src="assets/sounds/congratz-sound.mp3"></audio>
 		</div>
 	  </div>
 
