--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<div class="container-fluid content mt-4" >
+	<div class="container-fluid content" >
 		<div class="row">
 			<!-- <nav class="col-md-2 d-none d-md-block bg-light sidebar" style="height: calc(100vh - 58px)">
 				<div class="sidebar">
@@ -40,7 +40,7 @@
 			<main role="main" class="game col-md-9 ml-sm-auto col-lg-12 px-4 main" style="min-height: calc(100vh - 43px)">
 			
 				<div class="row">
-					<div class="col cards">
+					<div class="col cards mt-4 mb-4">
 					</div>
 				</div>
 
