--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>VR</title>
+	<title>Sound Memory Game</title>
 
 	<link rel="shortcut icon" href="assets/img/favicon.gif">
 	<link href="assets/css/bootstrap-reboot.min.css" rel="stylesheet">
