adding winning screeen and fix chose same card

--- a/app/index.html
+++ b/app/index.html
@@ -33,12 +33,12 @@
 						</a>
 					</li>
 				</ul>
-		
+
 				</div>
 			</nav> -->
-		
-			<main role="main" class="game col-md-9 ml-sm-auto col-lg-12 px-4 main" style="min-height: calc(100vh - 43px)">
-			
+
+			<main role="main" class="game col-md-9 ml-sm-auto col-lg-12 px-4 main" style="min-height: 100vh">
+
 				<div class="row">
 					<div class="col cards mt-4 mb-4">
 					</div>
@@ -49,6 +49,13 @@
 			<div class="modal-wave">
 				<div class="wrapper">
 					<img src="assets/img/sound-wave.gif" >
+				</div>
+			</div>
+
+			<div class="modal-congratz">
+				<div class="wrapper">
+					<h1>Parabéns ! Você ganhou</h1>
+					<img src="assets/img/happy.gif" >
 				</div>
 			</div>
 
